--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     Mit diesem ETF-Rechner kannst du berechnen, wie sich ein monatlicher
     ETF-Sparplan über viele Jahre entwickeln kann. Dabei werden nicht nur
     die erwartete Rendite, sondern auch laufende ETF-Kosten (TER),
-    eine jährliche Erhöhung der Sparrate sowie die Inflation berücksichtigt.
+    sowie die Inflation berücksichtigt.
   </p>
 
   <p>
@@ -93,4 +93,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
